<resources>
    <string name="app_name">KnopkokrasyAndroid1</string>
    <!-- строки для фрагмента welcome -->
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="incorrect_email">incorrect email</string>
    <!-- строки для фрагментаа join -->
    <string name="join_community">Join our community</string>
    <string name="already_have_account">Already have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>